add chatbot item

--- a/Demo20181220.ipynb
+++ b/Demo20181220.ipynb
@@ -973,6 +973,375 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 內容相似度對話機器人"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jieba\n",
+    "jieba.load_userdict('userdict.txt')\n",
+    "corpus = [' '.join(jieba.cut(q)) for q in ctbc_qa['question'].tolist()]\n",
+    "vectorizer = CountVectorizer()\n",
+    "knowledge= vectorizer.fit_transform(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入你的問題：hihi\n",
+      "我現在無法回答您的問題，等我變聰明以後再回答您的問題\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = input('請輸入你的問題：')\n",
+    "c = [' '.join(jieba.cut(user_input))]\n",
+    "user_vec = vectorizer.transform(c)\n",
+    "cs = cosine_distances(user_vec,knowledge)\n",
+    "idx = cs.argsort()[0][0]\n",
+    "if cs[0][idx] < 0.5:\n",
+    "    res = ctbc_qa.iloc[cs.argsort()[0][0]]\n",
+    "    print('請問你的問題是「{}」嗎?'.format(res['question']))\n",
+    "    print(res['answer'])\n",
+    "else:\n",
+    "    print('我現在無法回答您的問題，等我變聰明以後再回答您的問題')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 將檔案存成pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "#?pickle.dump\n",
+    "with open('vectorizer.pickle', 'wb') as f:\n",
+    "    pickle.dump(vectorizer, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 272,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('knowledge.pickle', 'wb') as f:\n",
+    "    pickle.dump(knowledge, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('data.pickle', 'wb') as f:\n",
+    "    pickle.dump(ctbc_qa, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "vec = pickle.loads(open('vectorizer.pickle','rb').read() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SynonymCountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "            dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "            lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "            ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "            strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "            tokenizer=None, vocabulary=None)"
+      ]
+     },
+     "execution_count": 258,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "know = pickle.loads(open('knowledge.pickle','rb').read() )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "請輸入你的問題：該如何辦定存\n",
+      "請問你的問題是「如何辦定存?」嗎?\n",
+      "A：1.整合式對帳單服務：凡是您透過中國信託商業銀行行銷通路購買之保單，而同時您又是中國信託網路銀行之客戶，只要您簽訂保險代理人業務同意書後，即可透過中國信託網路銀行查詢您完整的投保資訊。 2.理賠申請服務：您可至全臺任一中國信託商業銀行分行的保險代理業務專區申請理賠，我們除了提供理賠申請案件之代收送還可幫您追蹤理賠進度，再也不用擔心買了保單之後找不到業務員服務，即使保費只有360元也可享受完整的售後服務。\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = input('請輸入你的問題：')\n",
+    "c = [' '.join(jieba.cut(user_input))]\n",
+    "user_vec = vec.transform(c)\n",
+    "cs = cosine_distances(user_vec,know)\n",
+    "idx = cs.argsort()[0][0]\n",
+    "if cs[0][idx] < 0.5:\n",
+    "    res = ctbc_qa.iloc[cs.argsort()[0][0]]\n",
+    "    print('請問你的問題是「{}」嗎?'.format(res['question']))\n",
+    "    print(res['answer'])\n",
+    "else:\n",
+    "    print('我現在無法回答您的問題，等我變聰明以後再回答您的問題')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [20/Dec/2018 15:06:58] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Dec/2018 15:06:59] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
+     ]
+    }
+   ],
+   "source": [
+    "from flask import Flask,jsonify\n",
+    "app=Flask(__name__)\n",
+    "\n",
+    "@app.route(\"/\")\n",
+    "def getHello():\n",
+    "    return 'Hello World'\n",
+    "\n",
+    "app.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
+      "127.0.0.1 - - [20/Dec/2018 15:12:54] \"\u001b[37mGET /%E6%88%91%E8%A9%B2%E5%A6%82%E4%BD%95%E8%BE%A6%E5%AE%9A%E5%AD%98 HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [20/Dec/2018 15:13:05] \"\u001b[37mGET /%E6%88%91%E8%A9%B2%E5%A6%82%E4%BD%95%E8%BE%A6%E5%AE%9A%E5%AD%98 HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "from flask import Flask,jsonify\n",
+    "app=Flask(__name__)\n",
+    "know = pickle.loads(open('knowledge.pickle','rb').read() )\n",
+    "vec = pickle.loads(open('vectorizer.pickle','rb').read() )\n",
+    "\n",
+    "@app.route(\"/<user_input>\")\n",
+    "def getResponse(user_input):\n",
+    "    c = [' '.join(jieba.cut(user_input))]\n",
+    "    user_vec = vec.transform(c)\n",
+    "    cs = cosine_distances(user_vec,know)\n",
+    "    idx = cs.argsort()[0][0]\n",
+    "    if cs[0][idx] < 0.5:\n",
+    "        res = ctbc_qa.iloc[cs.argsort()[0][0]]\n",
+    "        return jsonify({'question':res['question'], 'response':res['answer']})\n",
+    "    else:\n",
+    "        return jsonify({'question':res['question'], 'resonse':'我現在無法回答您的問題，等我變聰明以後再回答您的問題'})\n",
+    "\n",
+    "app.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'該如何辦定存'"
+      ]
+     },
+     "execution_count": 279,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "listenTo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import speech_recognition\n",
+    "def listenTo():\n",
+    "    r = speech_recognition.Recognizer()\n",
+    "    with speech_recognition.Microphone() as source:\n",
+    "        r.adjust_for_ambient_noise(source)\n",
+    "        audio = r.listen(source)\n",
+    "    return r.recognize_google(audio, language='zh-TW')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting gtts\n",
+      "  Downloading https://files.pythonhosted.org/packages/e6/37/f55346a736278f0eb0ae9f7edee1a61028735ef0010db68a2e6fcd0ece56/gTTS-2.0.3.tar.gz\n",
+      "Requirement already up-to-date: six in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from gtts)\n",
+      "Requirement already up-to-date: bs4 in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from gtts)\n",
+      "Requirement already up-to-date: click in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from gtts)\n",
+      "Requirement already up-to-date: requests in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from gtts)\n",
+      "Collecting gtts_token (from gtts)\n",
+      "  Downloading https://files.pythonhosted.org/packages/e7/25/ca6e9cd3275bfc3097fe6b06cc31db6d3dfaf32e032e0f73fead9c9a03ce/gTTS-token-1.1.3.tar.gz\n",
+      "Requirement already up-to-date: beautifulsoup4 in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from bs4->gtts)\n",
+      "Requirement already up-to-date: certifi>=2017.4.17 in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from requests->gtts)\n",
+      "Requirement already up-to-date: urllib3<1.25,>=1.21.1 in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from requests->gtts)\n",
+      "Requirement already up-to-date: idna<2.9,>=2.5 in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from requests->gtts)\n",
+      "Requirement already up-to-date: chardet<3.1.0,>=3.0.2 in /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages (from requests->gtts)\n",
+      "Building wheels for collected packages: gtts, gtts-token\n",
+      "  Running setup.py bdist_wheel for gtts ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /Users/davidchiu/Library/Caches/pip/wheels/ac/d3/52/db6c154b20dfaab7e0b514eb5eef92cecd057e40e16fdda58b\n",
+      "  Running setup.py bdist_wheel for gtts-token ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /Users/davidchiu/Library/Caches/pip/wheels/dd/11/61/33f7e51bf545e910552b2255eead2a7cd8ef54064b46dceb34\n",
+      "Successfully built gtts gtts-token\n",
+      "Installing collected packages: gtts-token, gtts\n",
+      "  Found existing installation: gTTS-token 1.1.2\n",
+      "    Uninstalling gTTS-token-1.1.2:\n",
+      "      Successfully uninstalled gTTS-token-1.1.2\n",
+      "  Found existing installation: gTTS 2.0.1\n",
+      "    Uninstalling gTTS-2.0.1:\n",
+      "      Successfully uninstalled gTTS-2.0.1\n",
+      "Successfully installed gtts-2.0.3 gtts-token-1.1.3\n",
+      "\u001b[33mYou are using pip version 9.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install --upgrade gtts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'group'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-285-3484127891c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mmixer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmusic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{}.mp3'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mmixer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmusic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mspeak\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'你好'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-285-3484127891c8>\u001b[0m in \u001b[0;36mspeak\u001b[0;34m(sentence)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mtempfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNamedTemporaryFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdelete\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfp\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0mtts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgTTS\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msentence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m         \u001b[0mtts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"{}.mp3\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m         \u001b[0mmixer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmusic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'{}.mp3'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mmixer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmusic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.2/lib/python3.6/site-packages/gtts/tts.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(self, savefile)\u001b[0m\n\u001b[1;32m    245\u001b[0m             \u001b[0;34m:\u001b[0m\u001b[0;32mclass\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0mgTTSError\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mWhen\u001b[0m \u001b[0mthere\u001b[0m\u001b[0;31m'\u001b[0m\u001b[0ms\u001b[0m \u001b[0man\u001b[0m \u001b[0merror\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mAPI\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    246\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 247\u001b[0;31m         \"\"\"\n\u001b[0m\u001b[1;32m    248\u001b[0m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msavefile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'wb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    249\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite_to_fp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.2/lib/python3.6/site-packages/gtts/tts.py\u001b[0m in \u001b[0;36mwrite_to_fp\u001b[0;34m(self, fp)\u001b[0m\n\u001b[1;32m    185\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpart\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext_parts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 187\u001b[0;31m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    188\u001b[0m                 \u001b[0;31m# Calculate token\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m                 \u001b[0mpart_tk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalculate_token\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.2/lib/python3.6/site-packages/gtts_token/gtts_token.py\u001b[0m in \u001b[0;36mcalculate_token\u001b[0;34m(self, text, seed)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mseed\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m             \u001b[0mseed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_token_key\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0;34m[\u001b[0m\u001b[0mfirst_seed\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond_seed\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mseed\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.pyenv/versions/3.6.2/lib/python3.6/site-packages/gtts_token/gtts_token.py\u001b[0m in \u001b[0;36m_get_token_key\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     55\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"https://translate.google.com/\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m         \u001b[0mtkk_expr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"(tkk:.*?),\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mtkk_expr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m             raise ValueError(\n\u001b[1;32m     59\u001b[0m                 \u001b[0;34m\"Unable to find token seed! Did https://translate.google.com change?\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'group'"
+     ]
+    }
+   ],
+   "source": [
+    "from gtts import gTTS\n",
+    "from pygame import mixer\n",
+    "mixer.init()\n",
+    "\n",
+    "import tempfile\n",
+    "def speak(sentence):\n",
+    "    with tempfile.NamedTemporaryFile(delete=True) as fp:\n",
+    "        tts = gTTS(text=sentence, lang='zh_tw')\n",
+    "        tts.save(\"{}.mp3\".format(fp.name))\n",
+    "        mixer.music.load('{}.mp3'.format(fp.name))\n",
+    "        mixer.music.play()\n",
+    "speak('你好')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A：1.整合式對帳單服務：凡是您透過中國信託商業銀行行銷通路購買之保單，而同時您又是中國信託網路銀行之客戶，只要您簽訂保險代理人業務同意書後，即可透過中國信託網路銀行查詢您完整的投保資訊。 2.理賠申請服務：您可至全臺任一中國信託商業銀行分行的保險代理業務專區申請理賠，我們除了提供理賠申請案件之代收送還可幫您追蹤理賠進度，再也不用擔心買了保單之後找不到業務員服務，即使保費只有360元也可享受完整的售後服務。\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = listenTo()\n",
+    "c = [' '.join(jieba.cut(user_input))]\n",
+    "user_vec = vec.transform(c)\n",
+    "cs = cosine_distances(user_vec,know)\n",
+    "idx = cs.argsort()[0][0]\n",
+    "if cs[0][idx] < 0.5:\n",
+    "    res = ctbc_qa.iloc[cs.argsort()[0][0]]\n",
+    "    print(res['answer'])\n",
+    "else:\n",
+    "    print('我現在無法回答您的問題，等我變聰明以後再回答您的問題')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
