add chatbot item

--- a/Demo20181220.ipynb
+++ b/Demo20181220.ipynb
@@ -1342,6 +1342,468 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 抓取PTT 卡板資訊"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "res = requests.get('https://www.ptt.cc/bbs/creditcard/index.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "soup = BeautifulSoup(res.text, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coolboyjack [問題] 中信LP鼎極龍騰套餐使用問題 14 https://www.ptt.cc/bbs/creditcard/M.1545236602.A.B1D.html\n",
+      "FWade [情報] 107年11月信用卡發卡量與簽帳金額 19 https://www.ptt.cc/bbs/creditcard/M.1545236955.A.DED.html\n",
+      "whatcanidoo [問題] koko繳罰單 3 https://www.ptt.cc/bbs/creditcard/M.1545238192.A.E41.html\n",
+      "shnh38 [閒聊] 美國運通2019年 17 https://www.ptt.cc/bbs/creditcard/M.1545239884.A.352.html\n",
+      "vyvian [討論] 信用卡刷卡儲值管道 12 https://www.ptt.cc/bbs/creditcard/M.1545245273.A.37C.html\n",
+      "BMW220i Re: [問題] 刷外幣要長榮聯名卡 or 台新FlyGo 4 https://www.ptt.cc/bbs/creditcard/M.1545245754.A.269.html\n",
+      "loveswazi [閒聊] 我算刷不少吧 XX https://www.ptt.cc/bbs/creditcard/M.1545254934.A.00D.html\n",
+      "yehpeng65 [心得] 合庫 台大醫院卡 核卡 11 https://www.ptt.cc/bbs/creditcard/M.1545259678.A.05E.html\n",
+      "k300plus [問題] 台新加辦新卡有自動扣繳跟電子帳單嗎 3 https://www.ptt.cc/bbs/creditcard/M.1545270425.A.ADB.html\n",
+      "yoshikipata Re: [情報] JCB晶緻悠遊卡2019 39 https://www.ptt.cc/bbs/creditcard/M.1545273192.A.C76.html\n",
+      "tenghui Re: [情報] 台新FlyGo飛狗卡開放申請 55 https://www.ptt.cc/bbs/creditcard/M.1545276117.A.FC4.html\n",
+      "tony711 [問題] 請問2019無腦卡主推哪一張?  https://www.ptt.cc/bbs/creditcard/M.1545276782.A.498.html\n",
+      "ax19870820 [閒聊] KOKO卡回饋一問~~ 8 https://www.ptt.cc/bbs/creditcard/M.1545277341.A.739.html\n",
+      "Autumnleaf [心得] 學生小白 line pay、花旗饗樂 核卡 4 https://www.ptt.cc/bbs/creditcard/M.1545281567.A.F10.html\n",
+      "cookiebear [情報] JCB 2019晶緻禮遇卡友獨享 2 https://www.ptt.cc/bbs/creditcard/M.1545282026.A.499.html\n",
+      "kouta Fw: [討論] 9月份購買新機MOMOx國泰3500元回饋已出帳 5 https://www.ptt.cc/bbs/creditcard/M.1545282591.A.67B.html\n",
+      "faye543 [情報] 分眾 聯邦刷3筆188 送全家100抵用券 2 https://www.ptt.cc/bbs/creditcard/M.1545287916.A.972.html\n",
+      "cakepupu [情報] 聯邦偶數日2%活動持續至6/30  https://www.ptt.cc/bbs/creditcard/M.1545291567.A.1E1.html\n",
+      "MoonAthenaX [公告] === 卡板板規 V8.0 === (2018/05/25修訂) 5 https://www.ptt.cc/bbs/creditcard/M.1488251491.A.C7B.html\n",
+      "bboy0720 [公告] 置底檢舉專區 爆 https://www.ptt.cc/bbs/creditcard/M.1425488177.A.59D.html\n",
+      "MoonAthenaX [情報] 各家銀行0800免付費電話 71 https://www.ptt.cc/bbs/creditcard/M.1425873650.A.F81.html\n",
+      "DarkRobert [心得] 小資族 日常消費 最優惠回饋 整理(11/08) 爆 https://www.ptt.cc/bbs/creditcard/M.1528898930.A.F33.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "domain = 'https://www.ptt.cc'\n",
+    "for ent in soup.select('.r-ent'):\n",
+    "    if ent.select_one('a'):\n",
+    "        title = ent.select_one('.title').text.strip()\n",
+    "        nrec  = ent.select_one('.nrec').text.strip()\n",
+    "        author  = ent.select_one('.author').text.strip()\n",
+    "        link  = domain + ent.select_one('a').get('href')\n",
+    "        print(author, title, nrec, link)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pagenumber = int(soup.select('.btn')[3].get('href').split('index')[1].split('.html')[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2901\n",
+      "2900\n",
+      "2899\n",
+      "2898\n",
+      "2897\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(pagenumber, pagenumber - 5, -1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2901\n",
+      "2900\n",
+      "2899\n",
+      "2898\n",
+      "2897\n"
+     ]
+    }
+   ],
+   "source": [
+    "domain = 'https://www.ptt.cc'\n",
+    "articles = []\n",
+    "for pg in range(pagenumber, pagenumber - 5, -1):\n",
+    "    res = requests.get('https://www.ptt.cc/bbs/creditcard/index{}.html'.format(pg))\n",
+    "    soup = BeautifulSoup(res.text, 'lxml')\n",
+    "    for ent in soup.select('.r-ent'):\n",
+    "        if ent.select_one('a'):\n",
+    "            article = {}\n",
+    "            article['title'] = ent.select_one('.title').text.strip()\n",
+    "            article['nrec']  = ent.select_one('.nrec').text.strip()\n",
+    "            article['author']  = ent.select_one('.author').text.strip()\n",
+    "            article['link']  = domain + ent.select_one('a').get('href')\n",
+    "            articles.append(article)\n",
+    "    print(pg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "main = pandas.DataFrame(articles)\n",
+    "#main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.ptt.cc/bbs/creditcard/M.1545197257.A.49D.html'"
+      ]
+     },
+     "execution_count": 312,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main.iloc[0]['link']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "res = requests.get('https://www.ptt.cc/bbs/creditcard/M.1545197257.A.49D.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = BeautifulSoup(res.text, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 326,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "昨日進線客服預約明年機場接送服務，\n",
+      "客服表示明年權益說明還沒公告，\n",
+      "但會個案處理預扣2019的接送次數\n",
+      "趁怕明年權益更為縮水，剛好回國班機時間也不優\n",
+      "心一橫，想說直接填寫接機時接送至家裡。\n",
+      "填寫「桃園機場—台南市區」\n",
+      "今天收到簡訊已完成接送預訂！\n",
+      "\n",
+      "不知道大家最遠從機場接送到哪個縣市？\n",
+      "應該不會額外收費吧？\n",
+      "因為沒有填寫這麼遠的距離過，感謝回答\n",
+      "\n",
+      "\n",
+      "因為填寫接送表格不用寫卡號，並不知道預扣哪張。\n",
+      "\n",
+      "不過目前擁有的中信鼎極卡有5張：\n",
+      "\n",
+      "Lexus商務世界、中華電信聯名、ANA極致\n",
+      "\n",
+      "Line Pay無限卡、極致卡各一\n",
+      "\n",
+      "補圖：\n",
+      "\n",
+      "https://i.imgur.com/L1HkmrJ.jpg\n",
+      "\n",
+      "\n",
+      "https://i.imgur.com/7tihZzv.jpg\n",
+      "\n",
+      "\n",
+      "\n",
+      "補充（107/12/19更新）\n",
+      "\n",
+      "致電客服後，客服表示年刷達到100萬以上\n",
+      "\n",
+      "因此台南—桃園機場\n",
+      "\n",
+      "來回接送皆是不需要額外支付費用。\n",
+      "--\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in soup.select_one('#main-content').contents[4:]:\n",
+    "    s = BeautifulSoup(str(c), 'lxml')\n",
+    "    print(s.text)\n",
+    "    if str(c).strip() == '--':\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getArticle(url):\n",
+    "    res = requests.get(url)\n",
+    "    soup = BeautifulSoup(res.text, 'lxml')\n",
+    "    ret = ''\n",
+    "    for c in soup.select_one('#main-content').contents[4:]:\n",
+    "        s = BeautifulSoup(str(c), 'lxml')\n",
+    "        ret += s.text\n",
+    "        if '--' in str(c).strip():\n",
+    "            break\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.ptt.cc/bbs/creditcard/M.1545199423.A.BAE.html'"
+      ]
+     },
+     "execution_count": 331,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main.iloc[1]['link']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'申請Richart帳戶, 因為忘了用推薦連結\\n\\n所以最後沒驗證, 打電話請客服刪除資料\\n\\n今天接到台新簡訊說GOGO卡審核通過\\n\\n不知道是不是本身有台新卡的關係\\n\\n其中不知道哪段就算申請信用卡了\\n\\n莫名其妙就核卡了.......\\n\\n--\\n'"
+      ]
+     },
+     "execution_count": 332,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getArticle('https://www.ptt.cc/bbs/creditcard/M.1545199423.A.BAE.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "res = requests.get('https://www.ptt.cc/bbs/creditcard/M.1545199423.A.BAE.html')\n",
+    "soup = BeautifulSoup(res.text, 'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pushs = []\n",
+    "for p in soup.select('.push'):\n",
+    "    pushdata = {}\n",
+    "    pushdata['tag']     = p.select_one('.push-tag').text.strip()\n",
+    "    pushdata['userid']  = p.select_one('.push-userid').text.strip()\n",
+    "    pushdata['content'] = p.select_one('.push-content').text.lstrip(':')\n",
+    "    pushdata['dt']      = p.select_one('.push-ipdatetime').text.strip()\n",
+    "    pushs.append(pushdata)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pushdf = pandas.DataFrame(pushs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pushdf['link'] = 'https://www.ptt.cc/bbs/creditcard/M.1545199423.A.BAE.html'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>content</th>\n",
+       "      <th>dt</th>\n",
+       "      <th>tag</th>\n",
+       "      <th>userid</th>\n",
+       "      <th>link</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>你應該有勾選一起申請黑狗</td>\n",
+       "      <td>12/19 14:33</td>\n",
+       "      <td>推</td>\n",
+       "      <td>mwiei</td>\n",
+       "      <td>https://www.ptt.cc/bbs/creditcard/M.1545199423...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>看了這篇才發現開戶禮又延長了？！</td>\n",
+       "      <td>12/19 15:35</td>\n",
+       "      <td>推</td>\n",
+       "      <td>kyleJ</td>\n",
+       "      <td>https://www.ptt.cc/bbs/creditcard/M.1545199423...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>如果取消帳戶再用好友推薦連結重開戶可以拿到開戶500</td>\n",
+       "      <td>12/19 21:05</td>\n",
+       "      <td>推</td>\n",
+       "      <td>doubleches</td>\n",
+       "      <td>https://www.ptt.cc/bbs/creditcard/M.1545199423...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>嗎？</td>\n",
+       "      <td>12/19 21:05</td>\n",
+       "      <td>→</td>\n",
+       "      <td>doubleches</td>\n",
+       "      <td>https://www.ptt.cc/bbs/creditcard/M.1545199423...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>同樓上問題 想知道</td>\n",
+       "      <td>12/19 23:46</td>\n",
+       "      <td>推</td>\n",
+       "      <td>g2487</td>\n",
+       "      <td>https://www.ptt.cc/bbs/creditcard/M.1545199423...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>時間很多…</td>\n",
+       "      <td>12/20 09:40</td>\n",
+       "      <td>推</td>\n",
+       "      <td>willko</td>\n",
+       "      <td>https://www.ptt.cc/bbs/creditcard/M.1545199423...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       content           dt tag      userid  \\\n",
+       "0                 你應該有勾選一起申請黑狗  12/19 14:33   推       mwiei   \n",
+       "1             看了這篇才發現開戶禮又延長了？！  12/19 15:35   推       kyleJ   \n",
+       "2   如果取消帳戶再用好友推薦連結重開戶可以拿到開戶500  12/19 21:05   推  doubleches   \n",
+       "3                           嗎？  12/19 21:05   →  doubleches   \n",
+       "4                    同樓上問題 想知道  12/19 23:46   推       g2487   \n",
+       "5                        時間很多…  12/20 09:40   推      willko   \n",
+       "\n",
+       "                                                link  \n",
+       "0  https://www.ptt.cc/bbs/creditcard/M.1545199423...  \n",
+       "1  https://www.ptt.cc/bbs/creditcard/M.1545199423...  \n",
+       "2  https://www.ptt.cc/bbs/creditcard/M.1545199423...  \n",
+       "3  https://www.ptt.cc/bbs/creditcard/M.1545199423...  \n",
+       "4  https://www.ptt.cc/bbs/creditcard/M.1545199423...  \n",
+       "5  https://www.ptt.cc/bbs/creditcard/M.1545199423...  "
+      ]
+     },
+     "execution_count": 340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pushdf"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
