--- a/Demo20181220.ipynb
+++ b/Demo20181220.ipynb
@@ -1804,6 +1804,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 整理主文資料"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getArticle(url):\n",
+    "    res = requests.get(url)\n",
+    "    soup = BeautifulSoup(res.text, 'lxml')\n",
+    "    ret = ''\n",
+    "    for c in soup.select_one('#main-content').contents[4:]:\n",
+    "        s = BeautifulSoup(str(c), 'lxml')\n",
+    "        ret += s.text\n",
+    "        if '--' in str(c).strip():\n",
+    "            break\n",
+    "    return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2901\n",
+      "2900\n",
+      "2899\n",
+      "2898\n",
+      "2897\n"
+     ]
+    }
+   ],
+   "source": [
+    "domain = 'https://www.ptt.cc'\n",
+    "articles = []\n",
+    "for pg in range(pagenumber, pagenumber - 5, -1):\n",
+    "    res = requests.get('https://www.ptt.cc/bbs/creditcard/index{}.html'.format(pg))\n",
+    "    soup = BeautifulSoup(res.text, 'lxml')\n",
+    "    for ent in soup.select('.r-ent'):\n",
+    "        if ent.select_one('a'):\n",
+    "            article = {}\n",
+    "            article['title'] = ent.select_one('.title').text.strip()\n",
+    "            article['nrec']  = ent.select_one('.nrec').text.strip()\n",
+    "            article['author']  = ent.select_one('.author').text.strip()\n",
+    "            article['link']  = domain + ent.select_one('a').get('href')\n",
+    "            article['content'] = getArticle(article['link'])\n",
+    "            articles.append(article)\n",
+    "    print(pg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 344,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas\n",
+    "opinion_word = pandas.read_csv('ANTUSD/opinion_word_utf8.csv', header = None     )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opinion_word = opinion_word.iloc[:,[0,1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opinion_word.columns = ['word', 'score']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emotion_dict = opinion_word.set_index('word').to_dict()['score']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 366,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "問題 -0.1804542\n",
+      "支付 0.044938900000000004\n",
+      "還是 0.1\n",
+      "選擇 0.0210186\n",
+      "還是 0.1\n",
+      "轉換 0.05\n",
+      "第一次 0.036000533\n",
+      "遇到 0.0445837\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.216087533"
+      ]
+     },
+     "execution_count": 366,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "article = '''\n",
+    "因為飯店押金問題，他們說要退押金，當初我是用現金支付(押金與飯店費用)，\n",
+    "但他還是只能匯款或選擇退款到信用卡(限visa卡)\n",
+    "請問他這種是類似溢繳的方式嗎?\n",
+    "還是外幣 真怕轉換的手續費就被吃垮了XD\n",
+    "第一次遇到...\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "score = 0\n",
+    "for w in jieba.cut(article):\n",
+    "    if emotion_dict.get(w):\n",
+    "        print(w, emotion_dict.get(w))\n",
+    "        score += emotion_dict.get(w, 0)\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
