--- a/Demo20190213.ipynb
+++ b/Demo20190213.ipynb
@@ -735,6 +735,248 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-1-3be1c2be30d5>:4: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
+      "WARNING:tensorflow:From /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please write your own downloading logic.\n",
+      "WARNING:tensorflow:From /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:262: extract_images (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting /Users/davidchiu/tmp/train-images-idx3-ubyte.gz\n",
+      "WARNING:tensorflow:From /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:267: extract_labels (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.data to implement this functionality.\n",
+      "Extracting /Users/davidchiu/tmp/train-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:110: dense_to_one_hot (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use tf.one_hot on tensors.\n",
+      "Extracting /Users/davidchiu/tmp/t10k-images-idx3-ubyte.gz\n",
+      "Extracting /Users/davidchiu/tmp/t10k-labels-idx1-ubyte.gz\n",
+      "WARNING:tensorflow:From /Users/davidchiu/.pyenv/versions/3.6.2/lib/python3.6/site-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:290: DataSet.__init__ (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "from tensorflow.examples.tutorials.mnist import input_data\n",
+    "mnist = input_data.read_data_sets(\"/Users/davidchiu/tmp\", one_hot=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learning_rate   = 0.001\n",
+    "training_epochs = 15\n",
+    "batch_size      = 100\n",
+    "\n",
+    "n_hidden_1 = 256 \n",
+    "n_hidden_2 = 256 \n",
+    "n_input    = 784 \n",
+    "n_classes  = 10 \n",
+    "n_samples  = mnist.train.num_examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Placeholders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "with tf.name_scope('inputs'):\n",
+    "    x = tf.placeholder(\"float\", [None, n_input],   name= 'input_x')\n",
+    "    y = tf.placeholder(\"float\", [None, n_classes], name= 'input_y')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.name_scope('input_reshape'):\n",
+    "    image_input = tf.reshape(x,[-1,28,28,1])\n",
+    "    tf.summary.image('input', image_input, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_layer(x, input_tensors, output_tensors, layer_name, activation_function = None):  \n",
+    "    with tf.name_scope('Layer'):\n",
+    "        with tf.name_scope('Weights'):\n",
+    "            weight = tf.Variable(tf.random_normal([input_tensors, output_tensors]), name = 'w')\n",
+    "            tf.summary.histogram(name = layer_name + '/Weights', values = weight)\n",
+    "        with tf.name_scope('Bias'):\n",
+    "            bias = tf.Variable(tf.random_normal([output_tensors]), name= 'b')\n",
+    "            tf.summary.histogram(name = layer_name + '/Bias', values = bias)\n",
+    "        with tf.name_scope('Wx_plus_b'):\n",
+    "            formula = tf.add(tf.matmul(x, weight), bias)\n",
+    "        if activation_function is None:\n",
+    "            outputs = formula\n",
+    "        else:\n",
+    "            outputs = activation_function(formula)\n",
+    "        tf.summary.histogram(name = layer_name + '/Outputs', values = outputs)\n",
+    "        return outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layer1 = add_layer(x, input_tensors = n_input, output_tensors = n_hidden_1, layer_name='layer1',activation_function = tf.nn.relu)\n",
+    "layer2 = add_layer(layer1, input_tensors = n_hidden_1, output_tensors = n_hidden_2, layer_name='layer2',activation_function = tf.nn.relu)\n",
+    "out_layer = add_layer(layer2, input_tensors = n_hidden_2, output_tensors = n_classes, layer_name='out_layer',activation_function = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-7-85aab1677ab7>:2: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See @{tf.nn.softmax_cross_entropy_with_logits_v2}.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.name_scope('cost'):\n",
+    "    cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=out_layer, labels=y))\n",
+    "    tf.summary.scalar('loss', cost)\n",
+    "    \n",
+    "with tf.name_scope('optimizer'):\n",
+    "    optimizer = tf.train.GradientDescentOptimizer(learning_rate=learning_rate).minimize(cost)\n",
+    "    \n",
+    "with tf.name_scope('Accuracy'):\n",
+    "    acc = tf.equal(tf.argmax(out_layer, 1), tf.argmax(y, 1))\n",
+    "    acc = tf.reduce_mean(tf.cast(acc, tf.float32))\n",
+    "    tf.summary.scalar(\"accuracy\", acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 訓練模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init = tf.global_variables_initializer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1 cost=158.17035009557543\n",
+      "Epoch: 2 cost=55.093468905362265\n",
+      "Epoch: 3 cost=40.616655424291466\n",
+      "Epoch: 4 cost=32.97481956221839\n",
+      "Epoch: 5 cost=27.94403530554335\n",
+      "Epoch: 6 cost=24.31597251263534\n",
+      "Epoch: 7 cost=21.695081967440522\n",
+      "Epoch: 8 cost=19.52034002130683\n",
+      "Epoch: 9 cost=17.874279665730217\n",
+      "Epoch: 10 cost=16.35750202504071\n",
+      "Epoch: 11 cost=15.150252793593832\n",
+      "Epoch: 12 cost=14.083479566790855\n",
+      "Epoch: 13 cost=13.167158144929193\n",
+      "Epoch: 14 cost=12.372177070162525\n",
+      "Epoch: 15 cost=11.624001837210226\n",
+      "Training Completed in 15 Epochs\n"
+     ]
+    }
+   ],
+   "source": [
+    "merged = tf.summary.merge_all()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init)\n",
+    "\n",
+    "    ## Merge Summary\n",
+    "    \n",
+    "    writer = tf.summary.FileWriter(\"tensorboard2/\", graph = sess.graph)\n",
+    "\n",
+    "    for epoch in range(training_epochs):\n",
+    "        avg_cost = 0.0\n",
+    "        total_batch = int(n_samples/batch_size)\n",
+    "        for i in range(total_batch):\n",
+    "            batch_x, batch_y = mnist.train.next_batch(batch_size)\n",
+    "            _, c, result = sess.run([optimizer, cost, merged], feed_dict={x: batch_x, y: batch_y})\n",
+    "            avg_cost += c / total_batch\n",
+    "            ## Adding summary of each step\n",
+    "            writer.add_summary(result,  epoch * total_batch + i)\n",
+    "\n",
+    "        print(\"Epoch: {} cost={}\".format(epoch+1,avg_cost))\n",
+    "\n",
+    "    print(\"Training Completed in {} Epochs\".format(training_epochs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 開啟 TensorBoard\n",
+    "- tensorboard --logdir tensorboard2/\n",
+    "- 127.0.0.1:6006"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
